--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,65 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+  padding: 0px;
+  margin: 0px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.content-container {
+  background-color: #ffffff;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  margin-top: -30px;
+  height: 100vw;
+  z-index: 222;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+
+/* HEADERRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR */
+
+.header {
+  background-color: black;
+  background-image: url(https://anima-uploads.s3.amazonaws.com/projects/649881faab86312b9d597c60/releases/6498854dd97d93cb316a11e4/img/image-1-1@1x.png);
+  background-position: 50% 50%;
+  background-size: cover;
+  height: 66.74vw;
+  width: 100vw;
+  z-index: 000;
+}
+
+.nav-bar {
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+}
+
+.icon-feather-menu {
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  gap: 1.63vw;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: -2.67vw;
+  min-height: 5.33vw;
+  width: 8.36vw;
 }
 
-.App-link {
-  color: #61dafb;
+.trac-3 {
+  height: 0.93vw;
+  margin-left: -0.47vw;
+  object-fit: cover;
+  width: 9.3vw;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.groupe-18 {
+  background-image: url(https://anima-uploads.s3.amazonaws.com/projects/649881faab86312b9d597c60/releases/6498854dd97d93cb316a11e4/img/groupe-17-1@1x.png);
+  background-position: 50% 50%;
+  background-size: cover;
+  cursor: pointer;
+  width: 15.87vw;
+} 
+
+/* CARDSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS */
+
