--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,7 @@ body{
     color: fuchsia;
   }
   
+  
 /* _____________________________________________________________________________ */
 
 .footer {
@@ -110,5 +111,50 @@ body{
   .call-to-action {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   }
+
+/* _____________________________________________________________________________ */
+
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+  }
   
+  .card {
+    flex: 0 0 calc(50% - 20px); /* Deux cartes par ligne avec espace entre */
+    width: 150px; /* Largeur et hauteur identiques pour avoir des cartes carrées */
+    height: 150px;
+    background-color: black;
+    border-radius: 20px;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 20px;
+  }
+  
+  .card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.5; /* Opacité réduite */
+  }
+  
+  .card h3 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
+    font-size: 1.5em;
+    font-weight: bold;
+  }
+  
+  .card h3 span {
+    color: #ff00ff; /* Rose fushia */
+  }
   
