--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,15 @@
 body{
     margin: 0 auto;
 }
+a{
+    text-decoration: none;
+    color: white;
+}
 
 
 
 .header {
     height: 30vh;
-    background-color: black;
     position: relative;
     color: white;
     overflow: hidden; /* Assurez-vous que le contenu ne dépasse pas le header */
@@ -23,10 +26,9 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(''); /* Chemin de votre image de fond */
+    background-image: url('../public/img/headerimg.jpg'); /* Chemin de votre image de fond */
     background-size: cover;
-    opacity: 0.5; /* Opacité réduite */
-    z-index: -1; /* Mettez l'image de fond en arrière-plan */
+    z-index: -1; 
   }
   
   .header-logo {
@@ -40,14 +42,10 @@ body{
   }
   
   .header-title {
+    text-align: center;
     font-size: 36px;
     margin: 0 auto;
-    position: absolute;
-    top: 40%;
-  }
-  
-  .header-title span {
-    color: rgb(124, 49, 61);
+    margin-top: 2em;
   }
 
   .colored-text {
@@ -80,18 +78,20 @@ body{
 .content-container {
     position: relative;
     top: -2em;
+    padding-top: 1em;
     left: 0;
     width: 100%;
     background-color: white;
     color: #800020; /* Couleur bordeaux */
-    border-radius: 10px 10px 0 0; /* Bords arrondis seulement en haut */
+    border-radius: 20px 20px 0 0; /* Bords arrondis seulement en haut */
     z-index: 2; /* Ajustez la valeur du z-index si nécessaire */
   }
-
+ 
   /* _____________________________________________________________________________ */
 
   .call-to-action {
     position: absolute;
+    top: 7%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2; /* Pour afficher en premier plan */
@@ -119,13 +119,13 @@ body{
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
-    margin-top: 20px;
+    margin-top: 4em;
   }
   
   .card {
     flex: 0 0 calc(50% - 20px); /* Deux cartes par ligne avec espace entre */
-    width: 150px; /* Largeur et hauteur identiques pour avoir des cartes carrées */
-    height: 150px;
+     /* Largeur et hauteur identiques pour avoir des cartes carrées */
+    height: 200px;
     background-color: black;
     border-radius: 20px;
     position: relative;
@@ -145,7 +145,7 @@ body{
   
   .card h3 {
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
@@ -156,5 +156,145 @@ body{
   
   .card h3 span {
     color: #ff00ff; /* Rose fushia */
+  }
+    /* _____________________________________________________________________________ */
+
+
+    .progress-bar {
+        display: flex;
+        justify-content: center;
+        margin-top: 1rem;
+      }
+      
+      .progress-dot {
+        width: 10px;
+        height: 10px;
+        background-color: #ccc;
+        border-radius: 50%;
+        margin: 0 5px;
+        transition: background-color 0.3s;
+      }
+      
+      .filled {
+        background-color: #800020;
+      }
+      .program-form {
+        text-align: ce;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .program-form h2 {
+        width: 70%;
+        margin: 20px auto;
+      }
+      
+      .program-form > div {
+        text-align: center;
+        width: 90%;
+        max-width: 400px;
+        background-color: #ffffff;
+        border-radius: 20px;
+        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+      }
+      
+      label {
+        font-weight: bold;
+      }
+      
+      input {
+        color: pink;
+        width: 80%;
+        padding: 10px 5px 10px 5px ;
+        font-size: medium;
+        border: 1px solid #efefef;
+        border-radius: 10px;
+        margin: 1em;
+        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+      }
+      
+      .button-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 1em;
+      }
+      
+      .prev-button,
+      .next-button,
+      .submit-button {
+        padding: 5px;
+        margin: 5px;
+        background-color: #800020;
+        color: #ffffff;
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
+      }
+      
+      .progress-bar {
+        display: flex;
+        justify-content: center;
+        margin: 20px;
+      }
+      
+      .progress-dot {
+        width: 10px;
+        height: 10px;
+        background-color: #ccc;
+        border-radius: 50%;
+        margin: 0 5px;
+        transition: background-color 0.3s ease;
+      }
+      
+      .progress-dot.filled {
+        background-color: #800020;
+      }
+      
+      h2 {
+        margin-bottom: 10px;
+      }
+      
+/* _____________________________________________________________________________ */
+
+
+.coming-soon-container {
+    text-align: center;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 20px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .coming-soon-container h2 {
+    margin-bottom: 10px;
+  }
+  
+  .coming-soon-container p {
+    margin: 10px 0;
+  }
+  
+  input {
+    width: 100%;
+    padding: 10px;
+    font-size: medium;
+    border: 1px solid #efefef;
+    border-radius: 10px;
+    margin: 10px 0;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .submit-button {
+    padding: 10px 15px;
+    background-color: #800020;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
   }
   
