--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,10 @@
 body{
     margin: 0 auto;
     overflow-x: hidden;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 body::-webkit-scrollbar {
-    width: 0; /* Masque la largeur de la barre de défilement */
+    width: 0; 
   }
 a{
     text-decoration: none;
@@ -30,7 +31,7 @@ a{
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../public/img/headerimg.jpg'); /* Chemin de votre image de fond */
+    background-image: url('../public/img/Imageheader.png'); /* Chemin de votre image de fond */
     background-size: cover;
     z-index: -1; 
   }
@@ -53,14 +54,14 @@ a{
   }
 
   .colored-text {
-    color: fuchsia;
+    color: #F10071;
   }
   
   
 /* _____________________________________________________________________________ */
 
 .footer {
-    background-color: #800020; /* Couleur bordeaux */
+    background-color: #91004D;
     color: white;
     text-align: center;
     margin: 0px;
@@ -89,23 +90,25 @@ a{
     left: 0;
     width: 100%;
     background-color: white;
-    color: #800020; /* Couleur bordeaux */
-    border-radius: 20px 20px 0 0; /* Bords arrondis seulement en haut */
-    z-index: 2; /* Ajustez la valeur du z-index si nécessaire */
+    color: #91004D;
+    border-radius: 20px 20px 0 0; 
+    z-index: 2; 
   }
  
   /* _____________________________________________________________________________ */
 
   .call-to-action {
     position: absolute;
+    text-transform: uppercase;
+    font-size: 1.5em;
     top: 7%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 2; /* Pour afficher en premier plan */
-    background-color: #ff00ff; /* Rose fushia */
+    z-index: 2; 
+    background-color: #F10071;
     color: white; /* Texte en blanc */
     padding: 10px 20px;
-    border-radius: 20px;
+    border-radius: 50px;
   }
   
   .call-to-action a {
@@ -130,11 +133,11 @@ a{
   }
   
   .card {
-    flex: 0 0 calc(50% - 20px); /* Deux cartes par ligne avec espace entre */
-     /* Largeur et hauteur identiques pour avoir des cartes carrées */
+    flex: 0 0 calc(50% - 20px);
+    text-transform: uppercase;
     height: 200px;
     background-color: black;
-    border-radius: 20px;
+    border-radius: 40px;
     position: relative;
     overflow: hidden;
     margin-bottom: 20px;
@@ -147,7 +150,7 @@ a{
     position: absolute;
     top: 0;
     left: 0;
-    opacity: 0.5; /* Opacité réduite */
+    opacity: 0.5; 
   }
   
   .card h3 {
@@ -162,7 +165,7 @@ a{
   }
   
   .card h3 span {
-    color: #ff00ff; /* Rose fushia */
+    color: #F10071;
   }
     /* _____________________________________________________________________________ */
 
@@ -183,10 +186,9 @@ a{
       }
       
       .filled {
-        background-color: #800020;
+        background-color: #91004D;
       }
       .program-form {
-        text-align: ce;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -212,7 +214,7 @@ a{
       }
       
       input {
-        color: pink;
+        color: #91004D;
         width: 80%;
         padding: 10px 5px 10px 5px ;
         font-size: medium;
@@ -234,7 +236,7 @@ a{
       .submit-button {
         padding: 5px;
         margin: 5px;
-        background-color: #800020;
+        background-color: #91004D;
         color: #ffffff;
         border: none;
         border-radius: 10px;
@@ -257,7 +259,7 @@ a{
       }
       
       .progress-dot.filled {
-        background-color: #800020;
+        background-color: #91004D;
       }
       
       h2 {
@@ -298,7 +300,7 @@ a{
   .submit-button {
     padding: 10px 15px;
     margin: 20px;
-    background-color: #800020;
+    background-color: #91004D;
     color: #ffffff;
     border: none;
     border-radius: 5px;
