--- a/src/App.css
+++ b/src/App.css
@@ -31,19 +31,19 @@ a{
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../public/img/Imageheader.png'); /* Chemin de votre image de fond */
+    background-image: url('./img/Imageheader.png'); /* Chemin de votre image de fond */
     background-size: cover;
     z-index: -1; 
   }
   
   .header-logo {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 20px;
+    left: 20px;
   }
   
   .header-logo img {
-    max-width: 100px;
+    max-width: 60px;
   }
   
   .header-title {
@@ -61,16 +61,18 @@ a{
 /* _____________________________________________________________________________ */
 
 .footer {
+    width: 100%;
+    bottom: 0px;
     background-color: #91004D;
     color: white;
     text-align: center;
-    margin: 0px;
+    margin-top: 50px;
     padding-bottom: 20px;
     padding-top: 20px;
   }
   
   .footer-logo img {
-    max-width: 100px;
+    max-width: 150px;
   }
   
   .footer-info {
@@ -89,6 +91,7 @@ a{
     padding-top: 1em;
     left: 0;
     width: 100%;
+    min-height: 60vh;
     background-color: white;
     color: #91004D;
     border-radius: 20px 20px 0 0; 
@@ -100,8 +103,8 @@ a{
   .call-to-action {
     position: absolute;
     text-transform: uppercase;
-    font-size: 1.5em;
-    top: 7%;
+    font-size: 1.3em;
+    top: -2px;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2; 
@@ -129,7 +132,8 @@ a{
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
-    margin-top: 4em;
+    max-width: 600px;
+    margin: 4em auto;
   }
   
   .card {
@@ -167,6 +171,16 @@ a{
   .card h3 span {
     color: #F10071;
   }
+
+  .description {
+    width: 80%;
+    max-width: 500px;
+    text-align: center;
+    margin-top: 20px;
+    font-size: 18px;
+  }
+
+
     /* _____________________________________________________________________________ */
 
 
